# SecurityAutomationToolkit

./: .gitignore  README.md  generate_report.py  pyproject.toml  requirements-dev.txt  requirements.txt  security_score.py
.github/workflows/: ci.yml  security-scan.yml  test-suite.yml
config/: config.example.yaml
tests/: conftest.py  test_access_control.py  test_cookies.py  test_forms.py  test_headers.py  test_reporting.py  test_robots.py  test_scoring.py  test_server_disclosure.py  test_ssl.py
